# ollama-manager-gui

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  WARP.md  download_manager.py  install-arch.sh  network_client.py  ollama_manager_gui.py  pyproject.toml
.github/workflows/: python-ci.yml
